version/0.33/_sources/api/solver/_autosummary/settings/results.rst.txt
:orphan:

.. _results:

results
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.results
    :show-inheritance:

.. rubric:: Attributes

========================================================   ======================================================================================================================================================================================

Attribute                                                                                                                                                                                                                                 Summary

========================================================   ======================================================================================================================================================================================
:ref:`custom_field_functions <custom_field_functions_1>`                                                                                                                                       Provides access to creating custom field function.

:ref:`custom_vectors <custom_vectors>`                                                                                                                                                                                    'custom_vectors' child.

:ref:`surfaces <surfaces_8>`                                                                                                                          Provides access to creating multiple zone surfaces and to grouping and ungrouping surfaces.

:ref:`graphics <graphics>`                                                                                                                                                                                                      'graphics' child.

:ref:`plot <plot_4>`                                                                                                          Provides access to creating new and editing existing plots (XY histograms and so on) of your computational results.

:ref:`scene <scene>`                                                                                                                                                                                                               'scene' child.

:ref:`annotation <annotation>`                                                                                                                                                                        Add, Edit, Remove annotations in case file.

:ref:`animations <animations>`                                                                                                                                                                                                'animations' child.

:ref:`report <report_2>`                                       Provides access to common settings to set up reports for your CFD simulation. Reports can be compiled for fluxes forces projected areas surface and volume integrals among others.

========================================================   ======================================================================================================================================================================================

.. rubric:: Included in:

======================   ==================

Parent                              Summary

======================   ==================
:ref:`root <ref_root>`       'root' object.

======================   ==================

